<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="408dp"
        android:layout_height="49dp"
        android:background="#ffffff"
        android:gravity="end"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="408dp"
        android:layout_height="56dp"
        android:layout_marginTop="192dp"
        android:background="#ffffff"
        android:gravity="end"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tableLayout"
        android:layout_width="416dp"
        android:layout_height="353dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btn1"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="67dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btn2"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="67dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btn3"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintEnd_toStartOf="@+id/button19"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="83dp" />


        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btn4"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:layout_conversion_absoluteHeight="67dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btn5"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btn6"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button19"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="83dp" />


        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btn7"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button10"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            tools:layout_conversion_absoluteHeight="67dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:baselineAligned="false"
            android:text="@string/btn9"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button6"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="82dp" />


        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btn0"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7"
            tools:layout_conversion_absoluteHeight="67dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button11"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="96dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btnDecimal"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button8"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button13"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btnPlus"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button10"
            tools:layout_conversion_absoluteHeight="13dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btnPlusMinus"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button9"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button14"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="96dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btnMinus"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button11"
            tools:layout_conversion_absoluteHeight="13dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button16"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btnDivide"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button12"
            tools:layout_conversion_absoluteHeight="1dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button15"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btnMultiply"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button17"
            app:layout_constraintTop_toBottomOf="@+id/button13"
            tools:layout_conversion_absoluteHeight="1dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button17"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="96dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btnBack"
            android:textColor="@color/ic_launcher_background"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button14"
            tools:layout_conversion_absoluteHeight="1dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button18"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btnClear"
            android:textColor="@color/ic_launcher_background"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button16"
            tools:layout_conversion_absoluteHeight="1dp"
            tools:layout_conversion_absoluteWidth="83dp" />

        <Button
            android:id="@+id/button19"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="136dp"
            android:layout_height="365dp"
            android:background="@android:color/darker_gray"
            android:text="@string/btnCalculate"
            android:textColor="@color/ic_launcher_background"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="288dp"
            tools:layout_conversion_absoluteWidth="146dp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="96dp"
            android:layout_height="60dp"
            android:background="?attr/colorButtonNormal"
            android:text="@string/btn8"
            android:textColor="@color/ic_launcher_background"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="83dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>